--- a/verification.html
+++ b/verification.html
@@ -44,7 +44,7 @@
 				</div>
 				<div class="col">
 					<div class="row justify-content-center align-items-center">
-						<nav>
+						<nav class="main-nav">
 							<ul>
 								<li>
 									<a href="#">
