--- a/applications.html
+++ b/applications.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>AZOT - Профиль</title>
+	<title>AZOT - Заявки</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -25,7 +25,7 @@
 
 </head>
 
-<body class="profile-page">
+<body class="application-page">
 
 
 <div class="app">
@@ -125,7 +125,8 @@
 					<ul class="breadcrumbs">
 						<li>Главная</li>
 						<li>Личный кабинет</li>
-						<li class="current">Профиль</li>
+						<li>Профиль</li>
+						<li class="current">Заявки</li>
 					</li>
 				</div>
 			</div>
@@ -165,7 +166,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li class="current">
+								<li>
 									<a href="#">
 										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_1603_4806)">
@@ -180,7 +181,7 @@
 										<span>Профиль компании</span>
 									</a>
 								</li>
-								<li>
+								<li class="current">
 									<a href="#">
 										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_1603_4812)">
@@ -266,64 +267,351 @@
 					</div>
 				</div>
 				<div class="col-lg-9">
-					<div class="main_widget">
-						<div class="three mb-4">Личные данные</div>
-						<form action="">
-							<div class="form-group">
-								<label for="username">Имя пользователя</label>
-								<input type="text" id="username">
-							</div>
-							<div class="form-group">
-								<label for="usermail">Email</label>
-								<input type="email" id="usermail">
-							</div>
-							<div class="form-group">
-								<label for="userphone">Телефона</label>
-								<input type="text" id="userphone" class="phone">
-							</div>
-							<div class="d-flex justify-content-end mt-5">
-								<div class="btn btn-accent next_form">Сохранить изменения</div>
+					<div class="d-flex align-items-center justify-content-between">
+						<div class="two mb-4">Заявки</div>
+						<form action="" class="search_applications mb-4">
+							<div class="input_search">
+								<input type="search" name="search_applications" placeholder="Поиск по номеру">
 							</div>
 						</form>
 					</div>
-					<div class="main_widget">
-						<div class="three mb-5">Заполните данные о компании</div>
-						<form action="">
-							<div class="form-group">
-								<div class="four">Налоговые реквизиты</div>
-							</div>
-							<div class="form-group form-group-row d-flex align-items-center mb-1">
-								<div class="form-group">
-									<label for="inn">ИНН</label>
-									<input type="text" id="inn">
-								</div>
-								<div class="form-group">
-									<label for="kpp">КПП</label>
-									<input type="text" id="kpp">
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="fullcompany">Полное наименование</label>
-								<input type="text" id="fullcompany">
-							</div>
-							<div class="form-group">
-								<label for="shortcompany">Краткое наименование</label>
-								<input type="text" id="shortcompany">
-							</div>
-							<div class="form-group form-group-row d-flex align-items-center mb-1">
-								<div class="form-group">
-									<label for="ogrn">ОГРН</label>
-									<input type="text" id="ogrn">
-								</div>
-								<div class="form-group">
-									<label for="okpo">ОКПО</label>
-									<input type="text" id="okpo">
-								</div>
-							</div>
-							<div class="d-flex justify-content-end mt-5">
-								<div class="btn btn-accent next_form">Сохранить изменения</div>
-							</div>
-						</form>
+						<div class="application_filter d-flex align-items-center mb-3">
+							<div class="active">Все</div>
+							<div>Новые</div>
+							<div>Уточнение данных</div>
+							<div>КП</div>
+							<div>Документы</div>
+							<div>Оплата</div>
+							<div>Ожидает отгрузки</div>
+						</div>
+						<div class="application_widget_item d-flex justify-content-between align-items-start">
+							<table>
+								<tbody>
+									<tr>
+										<td>
+											<div class="less mb-2">№ 1221 от 22.06.2023</div>
+											<div class="four mb-2">Селитра аммичная</div>
+											<div class="less light">Объем: 1,5 т </div>
+											<div class="badget badget_new mt-3">Новая</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Упаковка</div>
+											<div class="small">МКР</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Способ доставки</div>
+											<div class="small">Самовывоз</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Стоимость, руб</div>
+											<div class="small">-</div>
+											<div class="less light mt-2">22 500 руб/тонна </div>
+											<a href="#" class="remove_link mb-1 mt-3">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<path d="M8.75 7.5H7.5V15H8.75V7.5Z" fill="#FC3A4D" />
+													<path d="M12.5 7.5H11.25V15H12.5V7.5Z" fill="#FC3A4D" />
+													<path d="M2.5 3.75V5H3.75V17.5C3.75 17.8315 3.8817 18.1495 4.11612 18.3839C4.35054 18.6183 4.66848 18.75 5 18.75H15C15.3315 18.75 15.6495 18.6183 15.8839 18.3839C16.1183 18.1495 16.25 17.8315 16.25 17.5V5H17.5V3.75H2.5ZM5 17.5V5H15V17.5H5Z" fill="#FC3A4D" />
+													<path d="M12.5 1.25H7.5V2.5H12.5V1.25Z" fill="#FC3A4D" />
+												</svg>
+												<span>Удалить заявку</span>
+											</a>
+										</td>
+										<td>
+											<a href="#" class="link">
+												<span>Подробнее</span>
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_2977)">
+														<path d="M13.75 10L7.5 16.25L6.625 15.375L12 10L6.625 4.625L7.5 3.75L13.75 10Z" fill="black" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_2977">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+											</a>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<div class="less mb-2">№ 1221 от 22.06.2023</div>
+											<div class="four mb-2">Селитра аммичная</div>
+											<div class="less light">Объем: 1,5 т </div>
+											<div class="badget badget_verificate  mt-3">
+												<span>
+													Уточните данные
+												</span>
+											</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Упаковка</div>
+											<div class="small">МКР</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Способ доставки</div>
+											<div class="small">Самовывоз</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Стоимость, руб</div>
+											<div class="small">-</div>
+											<div class="less light mt-2">22 500 руб/тонна </div>
+											<a href="#" class="remove_link mb-1 mt-3">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<path d="M8.75 7.5H7.5V15H8.75V7.5Z" fill="#FC3A4D" />
+													<path d="M12.5 7.5H11.25V15H12.5V7.5Z" fill="#FC3A4D" />
+													<path d="M2.5 3.75V5H3.75V17.5C3.75 17.8315 3.8817 18.1495 4.11612 18.3839C4.35054 18.6183 4.66848 18.75 5 18.75H15C15.3315 18.75 15.6495 18.6183 15.8839 18.3839C16.1183 18.1495 16.25 17.8315 16.25 17.5V5H17.5V3.75H2.5ZM5 17.5V5H15V17.5H5Z" fill="#FC3A4D" />
+													<path d="M12.5 1.25H7.5V2.5H12.5V1.25Z" fill="#FC3A4D" />
+												</svg>
+												<span>Удалить заявку</span>
+											</a>
+										</td>
+										<td>
+											<a href="#" class="link">
+												<span>Подробнее</span>
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_2977)">
+														<path d="M13.75 10L7.5 16.25L6.625 15.375L12 10L6.625 4.625L7.5 3.75L13.75 10Z" fill="black" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_2977">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+											</a>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<div class="less mb-2">№ 1221 от 22.06.2023</div>
+											<div class="four mb-2">Селитра аммичная</div>
+											<div class="less light">Объем: 1,5 т </div>
+											<div class="badget badget_view mt-3">
+												<span>
+													Просмотреть КП
+												</span>
+												<div class="d-flex align-items-center">
+													<a href="#">Принять</a>
+													<a href="#">Отказаться</a>
+												</div>
+											</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Упаковка</div>
+											<div class="small">МКР</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Способ доставки</div>
+											<div class="small">Самовывоз</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Стоимость, руб</div>
+											<div class="small">-</div>
+											<div class="less light mt-2">22 500 руб/тонна </div>
+											<a href="#" class="docs_link  mt-3">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_3256)">
+														<path d="M16.0625 5.8125L11.6875 1.4375C11.5625 1.3125 11.4375 1.25 11.25 1.25H5C4.3125 1.25 3.75 1.8125 3.75 2.5V17.5C3.75 18.1875 4.3125 18.75 5 18.75H15C15.6875 18.75 16.25 18.1875 16.25 17.5V6.25C16.25 6.0625 16.1875 5.9375 16.0625 5.8125ZM11.25 2.75L14.75 6.25H11.25V2.75ZM15 17.5H5V2.5H10V6.25C10 6.9375 10.5625 7.5 11.25 7.5H15V17.5Z" fill="#3C3C3C" />
+														<path d="M13.75 13.75H6.25V15H13.75V13.75Z" fill="#3C3C3C" />
+														<path d="M13.75 10H6.25V11.25H13.75V10Z" fill="#3C3C3C" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_3256">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+												<span>Документы <b>1</b></span>
+											</a>
+										</td>
+										<td>
+											<a href="#" class="link">
+												<span>Подробнее</span>
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_2977)">
+														<path d="M13.75 10L7.5 16.25L6.625 15.375L12 10L6.625 4.625L7.5 3.75L13.75 10Z" fill="black" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_2977">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+											</a>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<div class="less mb-2">№ 1221 от 22.06.2023</div>
+											<div class="four mb-2">Селитра аммичная</div>
+											<div class="less light">Объем: 1,5 т </div>
+											<div class="badget badget_docs mt-3">
+												<span>
+													Документы
+												</span>
+											</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Упаковка</div>
+											<div class="small">МКР</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Способ доставки</div>
+											<div class="small">Самовывоз</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Стоимость, руб</div>
+											<div class="small">-</div>
+											<div class="less light mt-2">22 500 руб/тонна </div>
+											<a href="#" class="docs_link  mt-3">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_3256)">
+														<path d="M16.0625 5.8125L11.6875 1.4375C11.5625 1.3125 11.4375 1.25 11.25 1.25H5C4.3125 1.25 3.75 1.8125 3.75 2.5V17.5C3.75 18.1875 4.3125 18.75 5 18.75H15C15.6875 18.75 16.25 18.1875 16.25 17.5V6.25C16.25 6.0625 16.1875 5.9375 16.0625 5.8125ZM11.25 2.75L14.75 6.25H11.25V2.75ZM15 17.5H5V2.5H10V6.25C10 6.9375 10.5625 7.5 11.25 7.5H15V17.5Z" fill="#3C3C3C" />
+														<path d="M13.75 13.75H6.25V15H13.75V13.75Z" fill="#3C3C3C" />
+														<path d="M13.75 10H6.25V11.25H13.75V10Z" fill="#3C3C3C" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_3256">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+												<span>Документы <b>1</b></span>
+											</a>
+										</td>
+										<td>
+											<a href="#" class="link lnik_notification">
+												<span>Подробнее</span>
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_2977)">
+														<path d="M13.75 10L7.5 16.25L6.625 15.375L12 10L6.625 4.625L7.5 3.75L13.75 10Z" fill="black" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_2977">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+											</a>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<div class="less mb-2">№ 1221 от 22.06.2023</div>
+											<div class="four mb-2">Селитра аммичная</div>
+											<div class="less light">Объем: 1,5 т </div>
+											<div class="badget badget_payment mt-3">
+												<span>
+													Документы
+												</span>
+											</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Упаковка</div>
+											<div class="small">МКР</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Способ доставки</div>
+											<div class="small">Самовывоз</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Стоимость, руб</div>
+											<div class="small">-</div>
+											<div class="less light mt-2">22 500 руб/тонна </div>
+											<a href="#" class="docs_link  mt-3">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_3256)">
+														<path d="M16.0625 5.8125L11.6875 1.4375C11.5625 1.3125 11.4375 1.25 11.25 1.25H5C4.3125 1.25 3.75 1.8125 3.75 2.5V17.5C3.75 18.1875 4.3125 18.75 5 18.75H15C15.6875 18.75 16.25 18.1875 16.25 17.5V6.25C16.25 6.0625 16.1875 5.9375 16.0625 5.8125ZM11.25 2.75L14.75 6.25H11.25V2.75ZM15 17.5H5V2.5H10V6.25C10 6.9375 10.5625 7.5 11.25 7.5H15V17.5Z" fill="#3C3C3C" />
+														<path d="M13.75 13.75H6.25V15H13.75V13.75Z" fill="#3C3C3C" />
+														<path d="M13.75 10H6.25V11.25H13.75V10Z" fill="#3C3C3C" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_3256">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+												<span>Документы <b>1</b></span>
+											</a>
+										</td>
+										<td>
+											<a href="#" class="link lnik_notification">
+												<span>Подробнее</span>
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_2977)">
+														<path d="M13.75 10L7.5 16.25L6.625 15.375L12 10L6.625 4.625L7.5 3.75L13.75 10Z" fill="black" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_2977">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+											</a>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<div class="less mb-2">№ 1221 от 22.06.2023</div>
+											<div class="four mb-2">Селитра аммичная</div>
+											<div class="less light">Объем: 1,5 т </div>
+											<div class="badget badget_ready mt-3">
+												<span>
+													Ожидает отгрузки
+												</span>
+												<div class="d-flex align-items-center">
+													<a href="#">Принять</a>
+													<a href="#">Отказаться</a>
+												</div>
+											</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Упаковка</div>
+											<div class="small">МКР</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Способ доставки</div>
+											<div class="small">Самовывоз</div>
+										</td>
+										<td>
+											<div class="less light mb-2">Стоимость, руб</div>
+											<div class="small">-</div>
+											<div class="less light mt-2">22 500 руб/тонна </div>
+											<a href="#" class="docs_link  mt-3">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_3256)">
+														<path d="M16.0625 5.8125L11.6875 1.4375C11.5625 1.3125 11.4375 1.25 11.25 1.25H5C4.3125 1.25 3.75 1.8125 3.75 2.5V17.5C3.75 18.1875 4.3125 18.75 5 18.75H15C15.6875 18.75 16.25 18.1875 16.25 17.5V6.25C16.25 6.0625 16.1875 5.9375 16.0625 5.8125ZM11.25 2.75L14.75 6.25H11.25V2.75ZM15 17.5H5V2.5H10V6.25C10 6.9375 10.5625 7.5 11.25 7.5H15V17.5Z" fill="#3C3C3C" />
+														<path d="M13.75 13.75H6.25V15H13.75V13.75Z" fill="#3C3C3C" />
+														<path d="M13.75 10H6.25V11.25H13.75V10Z" fill="#3C3C3C" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_3256">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+												<span>Документы <b>1</b></span>
+											</a>
+										</td>
+										<td>
+											<a href="#" class="link lnik_notification">
+												<span>Подробнее</span>
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_1521_2977)">
+														<path d="M13.75 10L7.5 16.25L6.625 15.375L12 10L6.625 4.625L7.5 3.75L13.75 10Z" fill="black" />
+													</g>
+													<defs>
+														<clipPath id="clip0_1521_2977">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+											</a>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
 				</div>
 			</div>
