--- a/profile.html
+++ b/profile.html
@@ -278,7 +278,7 @@
 								<input type="email" id="usermail">
 							</div>
 							<div class="form-group">
-								<label for="userphone">Телефона</label>
+								<label for="userphone">Телефон</label>
 								<input type="text" id="userphone" class="phone">
 							</div>
 							<div class="d-flex justify-content-end mt-5">
