--- a/profile.html
+++ b/profile.html
@@ -226,7 +226,7 @@
 												</clipPath>
 											</defs>
 										</svg>
-										<span>Документов</span>
+										<span>Документы</span>
 									</a>
 								</li>
 								<li>
