--- a/application.html
+++ b/application.html
@@ -106,7 +106,7 @@
 								</div>
 								<nav class="menu_toggle_dropdown">
 									<ul>
-										<li><a href="/profile.html">Профиль</a></li>
+										<li><a href="../profile.html">Профиль</a></li>
 										<li><a href="/applications.html">Заявки</a></li>
 										<li><a href="/history.html">История заказов</a></li>
 										<li><a href="/documents.html">Документы</a></li>
