--- a/application.html
+++ b/application.html
@@ -107,10 +107,10 @@
 								<nav class="menu_toggle_dropdown">
 									<ul>
 										<li><a href="/azot/profile.html">Профиль</a></li>
-										<li><a href="/applications.html">Заявки</a></li>
-										<li><a href="/history.html">История заказов</a></li>
-										<li><a href="/documents.html">Документы</a></li>
-										<li><a href="/index.html">Выйти</a></li>
+										<li><a href="/azot/applications.html">Заявки</a></li>
+										<li><a href="/azot/history.html">История заказов</a></li>
+										<li><a href="/azot/documents.html">Документы</a></li>
+										<li><a href="/azot/index.html">Выйти</a></li>
 									</ul>
 								</nav>
 							</div>
@@ -556,9 +556,9 @@
 								<div class="bold">Личный кабинет</div>
 								<nav>
 									<ul>
-										<li><a href="#">Заявки</a></li>
-										<li><a href="#">Профиль компании</a></li>
-										<li><a href="#">История заказов</a></li>
+										<li><a href="/azot/applications.html">Заявки</a></li>
+										<li><a href="/azot/profile.html">Профиль компании</a></li>
+										<li><a href="/azot/history.html">История заказов</a></li>
 									</ul>
 								</nav>
 							</div>
