--- a/documents.html
+++ b/documents.html
@@ -110,11 +110,11 @@
 									</div>
 									<nav class="menu_toggle_dropdown">
 										<ul>
-											<li><a href="/profile.html">Профиль</a></li>
-											<li><a href="/applications.html">Заявки</a></li>
-											<li><a href="/history.html">История заказов</a></li>
-											<li><a href="/documents.html">Документы</a></li>
-											<li><a href="/index.html">Выйти</a></li>
+											<li><a href="/azot/profile.html">Профиль</a></li>
+											<li><a href="/azot/applications.html">Заявки</a></li>
+											<li><a href="/azot/history.html">История заказов</a></li>
+											<li><a href="/azot/documents.html">Документы</a></li>
+											<li><a href="/azot/index.html">Выйти</a></li>
 										</ul>
 									</nav>
 								</div>
@@ -177,7 +177,7 @@
 							<nav>
 								<ul>
 									<li>
-										<a href="/profile.html">
+										<a href="/azot/profile.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4806)">
 													<path
@@ -194,7 +194,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="/applications.html">
+										<a href="/azot/applications.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4812)">
 													<path
@@ -214,7 +214,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="/history.html">
+										<a href="/azot/history.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4818)">
 													<path
@@ -234,7 +234,7 @@
 										</a>
 									</li>
 									<li class="current">
-										<a href="/documents.html">
+										<a href="/azot/documents.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4825)">
 													<path
@@ -257,7 +257,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="/profile.html">
+										<a href="/azot/profile.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4832)">
 													<path
@@ -277,7 +277,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="/index.html">
+										<a href="/azot/index.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4838)">
 													<path
@@ -844,9 +844,9 @@
 							<div class="bold">Личный кабинет</div>
 							<nav>
 								<ul>
-									<li><a href="#">Заявки</a></li>
-									<li><a href="#">Профиль компании</a></li>
-									<li><a href="#">История заказов</a></li>
+									<li><a href="/azot/applications.html">Заявки</a></li>
+									<li><a href="/azot/profile.html">Профиль компании</a></li>
+									<li><a href="/azot/history.html">История заказов</a></li>
 								</ul>
 							</nav>
 						</div>
