--- a/applications.html
+++ b/applications.html
@@ -111,11 +111,11 @@
 									</div>
 									<nav class="menu_toggle_dropdown">
 										<ul>
-											<li><a href="/profile.html">Профиль</a></li>
-											<li><a href="/applications.html">Заявки</a></li>
-											<li><a href="/history.html">История заказов</a></li>
-											<li><a href="/documents.html">Документы</a></li>
-											<li><a href="/index.html">Выйти</a></li>
+											<li><a href="/azot/profile.html">Профиль</a></li>
+											<li><a href="/azot/applications.html">Заявки</a></li>
+											<li><a href="/azot/history.html">История заказов</a></li>
+											<li><a href="/azot/documents.html">Документы</a></li>
+											<li><a href="/azot/index.html">Выйти</a></li>
 										</ul>
 									</nav>
 								</div>
@@ -179,7 +179,7 @@
 							<nav>
 								<ul>
 									<li>
-										<a href="/profile.html">
+										<a href="/azot/profile.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4806)">
 													<path
@@ -196,7 +196,7 @@
 										</a>
 									</li>
 									<li class="current">
-										<a href="/applications.html">
+										<a href="/azot/applications.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4812)">
 													<path
@@ -216,7 +216,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="/history.html">
+										<a href="/azot/history.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4818)">
 													<path
@@ -236,7 +236,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="/documents.html">
+										<a href="/azot/documents.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4825)">
 													<path
@@ -259,7 +259,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="/profile.html">
+										<a href="/azot/profile.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4832)">
 													<path
@@ -279,7 +279,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="/index.html">
+										<a href="/azot/index.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4838)">
 													<path
@@ -355,7 +355,7 @@
 											</a>
 										</td>
 										<td>
-											<a href="/application.html" class="link">
+											<a href="/azot/application.html" class="link">
 												<span>Подробнее</span>
 												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<g clip-path="url(#clip0_1521_2977)">
@@ -407,7 +407,7 @@
 											</a>
 										</td>
 										<td>
-											<a href="/application.html" class="link">
+											<a href="/azot/application.html" class="link">
 												<span>Подробнее</span>
 												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<g clip-path="url(#clip0_1521_2977)">
@@ -469,7 +469,7 @@
 											</a>
 										</td>
 										<td>
-											<a href="/application.html" class="link">
+											<a href="/azot/application.html" class="link">
 												<span>Подробнее</span>
 												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<g clip-path="url(#clip0_1521_2977)">
@@ -527,7 +527,7 @@
 											</a>
 										</td>
 										<td>
-											<a href="/application.html" class="link lnik_notification">
+											<a href="/azot/application.html" class="link lnik_notification">
 												<span>Подробнее</span>
 												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<g clip-path="url(#clip0_1521_2977)">
@@ -585,7 +585,7 @@
 											</a>
 										</td>
 										<td>
-											<a href="/application.html" class="link lnik_notification">
+											<a href="/azot/application.html" class="link lnik_notification">
 												<span>Подробнее</span>
 												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<g clip-path="url(#clip0_1521_2977)">
@@ -647,7 +647,7 @@
 											</a>
 										</td>
 										<td>
-											<a href="/application.html" class="link lnik_notification">
+											<a href="/azot/application.html" class="link lnik_notification">
 												<span>Подробнее</span>
 												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<g clip-path="url(#clip0_1521_2977)">
@@ -718,9 +718,9 @@
 							<div class="bold">Личный кабинет</div>
 							<nav>
 								<ul>
-									<li><a href="#">Заявки</a></li>
-									<li><a href="#">Профиль компании</a></li>
-									<li><a href="#">История заказов</a></li>
+									<li><a href="/azot/applications.html">Заявки</a></li>
+									<li><a href="/azot/profile.html">Профиль компании</a></li>
+									<li><a href="/azot/history.html">История заказов</a></li>
 								</ul>
 							</nav>
 						</div>
