--- a/profile.html
+++ b/profile.html
@@ -106,11 +106,11 @@
 								</div>
 								<nav class="menu_toggle_dropdown">
 									<ul>
-										<li><a href="/profile.html">Профиль</a></li>
-										<li><a href="/applications.html">Заявки</a></li>
-										<li><a href="/history.html">История заказов</a></li>
-										<li><a href="/documents.html">Документы</a></li>
-										<li><a href="/index.html">Выйти</a></li>
+										<li><a href="/azot/profile.html">Профиль</a></li>
+										<li><a href="/azot/applications.html">Заявки</a></li>
+										<li><a href="/azot/history.html">История заказов</a></li>
+										<li><a href="/azot/documents.html">Документы</a></li>
+										<li><a href="/azot/index.html">Выйти</a></li>
 									</ul>
 								</nav>
 							</div>
@@ -169,7 +169,7 @@
 						<nav>
 							<ul>
 								<li class="current">
-									<a href="/profile.html">
+									<a href="/azot/profile.html">
 										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_1603_4806)">
 												<path d="M21 7.5H16.5V4.5C16.5 4.10218 16.342 3.72064 16.0607 3.43934C15.7794 3.15804 15.3978 3 15 3H9C8.60218 3 8.22064 3.15804 7.93934 3.43934C7.65804 3.72064 7.5 4.10218 7.5 4.5V7.5H3C2.60218 7.5 2.22064 7.65804 1.93934 7.93934C1.65804 8.22064 1.5 8.60218 1.5 9V19.5C1.5 19.8978 1.65804 20.2794 1.93934 20.5607C2.22064 20.842 2.60218 21 3 21H21C21.3978 21 21.7794 20.842 22.0607 20.5607C22.342 20.2794 22.5 19.8978 22.5 19.5V9C22.5 8.60218 22.342 8.22064 22.0607 7.93934C21.7794 7.65804 21.3978 7.5 21 7.5ZM9 4.5H15V7.5H9V4.5ZM3 19.5V9H21V19.5H3Z" fill="#999999" />
@@ -184,7 +184,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="/applications.html">
+									<a href="/azot/applications.html">
 										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_1603_4812)">
 												<path d="M16.5 16.5V21H4.5V3H12V1.5H4.5C4.10218 1.5 3.72064 1.65804 3.43934 1.93934C3.15804 2.22064 3 2.60218 3 3V21C3 21.3978 3.15804 21.7794 3.43934 22.0607C3.72064 22.342 4.10218 22.5 4.5 22.5H16.5C16.8978 22.5 17.2794 22.342 17.5607 22.0607C17.842 21.7794 18 21.3978 18 21V16.5H16.5Z" fill="#999999" />
@@ -200,7 +200,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="/history.html">
+									<a href="/azot/history.html">
 										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_1603_4818)">
 												<path d="M15 15.75H9C8.60218 15.75 8.22064 15.592 7.93934 15.3107C7.65804 15.0294 7.5 14.6478 7.5 14.25V12.75C7.5 12.3522 7.65804 11.9706 7.93934 11.6893C8.22064 11.408 8.60218 11.25 9 11.25H15C15.3978 11.25 15.7794 11.408 16.0607 11.6893C16.342 11.9706 16.5 12.3522 16.5 12.75V14.25C16.5 14.6478 16.342 15.0294 16.0607 15.3107C15.7794 15.592 15.3978 15.75 15 15.75ZM9 12.75V14.25H15V12.75H9Z" fill="#999999" />
@@ -216,7 +216,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="/documents.html">
+									<a href="/azot/documents.html">
 										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_1603_4825)">
 												<path d="M12 1.5V3H19.5V14.25H21V3C20.9995 2.60232 20.8414 2.22105 20.5602 1.93984C20.279 1.65864 19.8977 1.50046 19.5 1.5H12Z" fill="#999999" />
@@ -233,7 +233,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="/profile.html">
+									<a href="/azot/profile.html">
 										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_1603_4832)">
 												<path d="M15.75 1.5C14.696 1.49973 13.6565 1.74637 12.7149 2.22016C11.7734 2.69395 10.9559 3.38171 10.328 4.22833C9.70011 5.07495 9.27927 6.05688 9.0992 7.09543C8.91913 8.13398 8.98484 9.20027 9.29107 10.2088L1.5 18V22.5H6L13.7911 14.7088C14.7195 14.9907 15.6978 15.0692 16.6593 14.9388C17.6208 14.8083 18.5429 14.4722 19.3627 13.9532C20.1826 13.4341 20.8808 12.7445 21.41 11.9312C21.9392 11.1179 22.2868 10.2 22.4291 9.24022C22.5714 8.28042 22.5052 7.30121 22.2348 6.36933C21.9645 5.43745 21.4964 4.57481 20.8625 3.8402C20.2286 3.10558 19.4438 2.51627 18.5615 2.11243C17.6793 1.70858 16.7203 1.49969 15.75 1.5ZM15.75 13.5C15.2336 13.4997 14.72 13.4233 14.2259 13.2733L13.3657 13.0125L12.7304 13.6479L10.3445 16.0338L9.31057 15L8.25 16.0606L9.28403 17.0945L8.0946 18.284L7.06057 17.25L6 18.3106L7.03403 19.3445L5.3787 21H3V18.6213L10.3517 11.2696L10.9871 10.634L10.7267 9.774C10.4061 8.71724 10.4269 7.5863 10.7862 6.54206C11.1454 5.49781 11.8248 4.59345 12.7277 3.9576C13.6306 3.32175 14.711 2.9868 15.8152 3.0004C16.9195 3.014 17.9913 3.37545 18.8782 4.03333C19.7652 4.69122 20.4221 5.61204 20.7556 6.66482C21.089 7.71759 21.082 8.8487 20.7355 9.89724C20.389 10.9458 19.7207 11.8584 18.8256 12.5052C17.9305 13.152 16.8543 13.5001 15.75 13.5Z" fill="#999999" />
@@ -249,7 +249,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="/index.html">
+									<a href="/azot/index.html">
 										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_1603_4838)">
 												<path d="M4.5 22.5H13.5C13.8977 22.4995 14.279 22.3414 14.5602 22.0602C14.8414 21.7789 14.9995 21.3977 15 21V18.75H13.5V21H4.5V3H13.5V5.25H15V3C14.9995 2.60232 14.8414 2.22105 14.5602 1.93984C14.279 1.65864 13.8977 1.50046 13.5 1.5H4.5C4.10232 1.50046 3.72105 1.65864 3.43984 1.93984C3.15864 2.22105 3.00046 2.60232 3 3V21C3.00046 21.3977 3.15864 21.7789 3.43984 22.0602C3.72105 22.3414 4.10232 22.4995 4.5 22.5Z" fill="#FC3A4D" />
@@ -380,9 +380,9 @@
 						<div class="bold">Личный кабинет</div>
 						<nav>
 							<ul>
-								<li><a href="#">Заявки</a></li>
-								<li><a href="#">Профиль компании</a></li>
-								<li><a href="#">История заказов</a></li>
+								<li><a href="/azot/applications.html">Заявки</a></li>
+								<li><a href="/azot/profile.html">Профиль компании</a></li>
+								<li><a href="/azot/history.html">История заказов</a></li>
 							</ul>
 						</nav>
 					</div>
