--- a/profile.html
+++ b/profile.html
@@ -459,7 +459,7 @@
 							<option value="">ЖД транспорт</option>
 						</select>
 						<select name="" id="" class="js-select-single">
-							<option value="">Авиатранспорт</option>
+							<option value="">Москва-3</option>
 						</select>
 					</div>
 					<div class="link_accent mt-3 mb-4">Добавить пункт выгрузки</div>
