--- a/history.html
+++ b/history.html
@@ -38,7 +38,7 @@
 				<div class="row align-items-center">
 					<div class="col">
 						<div class="d-flex align-items-center">
-							<a href="/" class="logo">
+							<a href="/azot/index.html" class="logo">
 								<img src="images/logo.svg">
 							</a>
 							<div class="city_choice">
@@ -51,13 +51,13 @@
 							<nav class="main-nav">
 								<ul>
 									<li>
-										<a href="#">
+										<a href="/azot/catalog.html">
 											<img src="images/icons/grid.svg">
 											<span>Каталог</span>
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="/azot/faq.html">
 											<img src="images/icons/support.svg">
 											<span>Помощь</span>
 										</a>
