--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 		<div class="container-fluid">
 			<div class="row align-items-center">
 				<div class="col">
-					<a href="/" class="logo">
+					<a href="/azot/index.html" class="logo">
 						<img src="images/logo.svg">
 					</a>
 				</div>
 				<div class="col">
 					<div class="d-flex align-items-center justify-content-end">
-						<a href="#" class="btn">Вернуться на главную</a>
+						<a href="/azot/frontpage.html" class="btn">Вернуться на главную</a>
 					</div>
 				</div>
 			</div>
