--- a/product-registred.html
+++ b/product-registred.html
@@ -38,7 +38,7 @@
 				<div class="row align-items-center">
 					<div class="col">
 						<div class="d-flex align-items-center">
-							<a href="/azot/index.html" class="logo">
+							<a href="/azot/frontpage.html" class="logo">
 								<img src="images/logo.svg">
 							</a>
 							<div class="city_choice">
