--- a/faq.html
+++ b/faq.html
@@ -123,42 +123,69 @@
 						<div class="faq_widget_item">
 							<div class="three">КТО МОЖЕТ ЗАРЕГИСТРИРОВАТЬСЯ В МАРКЕТЕ</div>
 							<div class="small">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								Зарегистрировать на сайте может любая фирма, имеющая статус юридического лица или ИП
 							</div>
 						</div>
 						<div class="faq_widget_item">
 							<div class="three">КАКИЕ ДОКУМЕНТЫ НУЖНЫ</div>
 							<div class="small">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								Для Юридического лица (АО, ООО, ПАО и пр.):
+								<ol>
+									<li>Карта партнера;</li>
+									<li>устав предприятия (полный)</li>
+									<li>свидетельство о внесении записи в Единый государственный реестр</li>
+									<li>свидетельство о постановке на учет в налоговом органе</li>
+									<li>протокол общего собрания о назначении руководителя;</li>
+									<li>протокола либо решение о назначении руководителя;</li>
+									<li>отчет о финрезультатах и квитанции о получении налоговой бухотчетности;</li>
+									<li>титульный лист РСВ (расчеты по страховым взносам) за последний отчетный период.</li>
+								</ul>
+								Для КФХ и ИП:
+								<ol>
+									<li>Карта партнера;</li>
+									<li>выписка из ЕГРИП;</li>
+									<li>свидетельство о постановке на учет в налоговом органе;</li>
+									<li>уведомление о постановке на учет ФЛ в налоговом органе;</li>
+									<li>титульный лист РСВ (расчет по страховым взносам) за последний период).</li>
+								</ol>
 							</div>
 						</div>
 						<div class="faq_widget_item">
 							<div class="three">КАКИЕ ВИДЫ ДОСТАВКИ ЕСТЬ</div>
-							<div class="small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							<div class="small">
+								<ol>
+									<li>Самовывоз;</li>
+									<li>Доставка ЖД транспортом;</li>
+									<li>Доставка автотранспортом.</li>
+								</ol>
 							</div>
 						</div>
 						<div class="faq_widget_item">
 							<div class="three">ГДЕ ПРОИЗВОДСТВО</div>
 							<div class="small">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								<ol>
+									<li>АО «Аммоний». Адрес производства: Россия, Республика Татарстан, г. Менделеевск, Промзона. Сайт производителя - https://ammoni.ru/</li>
+									<li>АО «Мелеузовские минеральные удобрения». Адрес производства: Россия, Республика Башкортостан, г. Мелеуз, площадь Химзавода. Сайт производителя - https://oaommu.ru/</li>
+									<li>КАО «Азот». Адрес производства: Россия, Кемеровская область, г. Кемерово, ул. Грузовая, стр. 1. Сайт производителя - https://www.kem-azot.ru/</li>
+								</ol>
 							</div>
 						</div>
 						<div class="faq_widget_item">
 							<div class="three">КАКОЙ МИНИМАЛЬНЫЙ ОБЪЕМ ЗАКАЗА</div>
 							<div class="small">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								Минимальный объем заказа при самовывозе – 50кг, при выборе способа доставки ЖД транспортом – вагонная партия.
 							</div>
 						</div>
 						<div class="faq_widget_item">
 							<div class="three">МОГУ Я ПОКУПАТЬ ОТ РАЗНЫХ ЮР.ЛИЦ?</div>
 							<div class="small">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								Да, покупка от разных юридических лиц возможна, для этого необходимо пройти процедуру регистрации (ссылка на форму регистрации) и верификации (ссылка на форму верификации)
 							</div>
 						</div>
 						<div class="faq_widget_item">
-							<div class="three">КАК РАСЧИТЫВАЕТСЯ СТОИМОСТЬ</div>
+							<div class="three">Как рассчитывается стоимость</div>
 							<div class="small">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								Цена продукции зависит пункта назначения доставки продукции, его базовой цены. Итоговую стоимость вы можете найти в разделе «Личный кабинет» (ссылка на личный кабинет) либо по телефону.
 							</div>
 						</div>
 					</div>
@@ -169,7 +196,7 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="main_widget contact_widget mt-5">
-						<div class="two mb-4">Мы можем предоставить дополнительную информацию</div>
+						<div class="two mb-4">Возникли вопросы? Напишите нам!</div>
 						<form action="">
 							<div class="form-group form-group-row d-flex align-items-center">
 								<div class="form-group">
