--- a/frontpage.html
+++ b/frontpage.html
@@ -145,7 +145,7 @@
 										1
 									</div>
 									<div class="bold text mb-2">Зарегистрируйтесь</div>
-									<p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+									<p class="small mb-0">Если вы впервые на сайте, зарегистрируйтесь </p>
 									<a href="/azot/index.html" class="btn btn-accent mt-3">Начать</a>
 								</div>
 							</div>
@@ -155,7 +155,7 @@
 										2
 									</div>
 									<div class="bold text mb-2">Загрузите документы для верификации</div>
-									<p class="small mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+									<p class="small mb-0">Наши специалисты оперативно проверят поступившие документы, в случае возникновения вопросов – свяжутся для уточнения.</p>
 								</div>
 							</div>
 							<div class="buy_steps_widget">
@@ -164,7 +164,8 @@
 										3
 									</div>
 									<div class="bold text mb-2">Оформите первую заявку в каталоге</div>
-									<p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+									<p class="small mb-0">Для оформления заявки воспользуйтесь каталогом.</p>
+									<a href="/azot/catalog.html" class="btn btn-accent mt-3">В каталог</a>
 								</div>
 							</div>
 						</div>
@@ -195,7 +196,7 @@
 							</svg>
 						</div>
 						<div class="text bold mb-2">Удобная верификация</div>
-						<div class="small">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</div>
+						<div class="small">Вся процедура верификации проходит в он-лайн формате</div>
 					</div>
 					<div class="col pr-2">
 						<div class="advantage_icon d-flex align-items-center justify-content-center mb-4">
@@ -218,7 +219,7 @@
 							</svg>
 						</div>
 						<div class="text bold mb-2">Отслеживание сделки</div>
-						<div class="small">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</div>
+						<div class="small">Все этапы сделки отслеживаются на сайте – оплата, отгрузка, предоставление документов</div>
 					</div>
 					<div class="col pr-2">
 						<div class="advantage_icon d-flex align-items-center justify-content-center mb-4">
@@ -239,7 +240,7 @@
 							</svg>
 						</div>
 						<div class="text bold mb-2">Контроль оплат</div>
-						<div class="small">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</div>
+						<div class="small">Вы можете отслеживать поступление денежных средств в разделе <a href="/azot/profile.html" class="text-link">«Личный кабинет</a>»</div>
 					</div>
 					<div class="col pr-2">
 						<div class="advantage_icon d-flex align-items-center justify-content-center mb-4">
@@ -259,8 +260,8 @@
 								</defs>
 							</svg>
 						</div>
-						<div class="text bold mb-2">Контроль оплат</div>
-						<div class="small">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</div>
+						<div class="text bold mb-2">История отгрузок</div>
+						<div class="small">Статистику и аналитику по прошедшим отгрузкам отгрузкам можно отследить в разделе <a href="/azot/profile.html" class="text-link">«Личный кабинет»</a></div>
 					</div>
 				</div>
 			</div>
@@ -339,7 +340,7 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="main_widget contact_widget mt-5">
-						<div class="two mb-4">Мы можем предоставить дополнительную информацию</div>
+						<div class="two mb-4">Возникли вопросы? Напишите нам!</div>
 						<form action="">
 							<div class="form-group form-group-row d-flex align-items-center">
 								<div class="form-group">
