--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									</div>
 									<div class="d-flex align-items-center justify-content-between mt-4">
 										<p class="mb-0">Нажимая кнопку «Продолжить» Вы соглашаетесь на обработку предоставленных вами персональных данных.</p>
-										<button class="btn btn-accent">Продолжить</button>
+										<a href="/azot/profile.html" class="btn btn-accent">Продолжить</a>
 									</div>
 								</form>
 								<form>
@@ -89,7 +89,7 @@
 									</div>
 									<div class="d-flex align-items-center justify-content-between mt-4">
 										<p class="mb-0">Нажимая кнопку «Войти» Вы соглашаетесь на обработку предоставленных вами персональных данных.</p>
-										<button class="btn btn-accent">Войти</button>
+										<a href="/azot/profile.html" class="btn btn-accent">Войти</a>
 									</div>
 								</form>
 							</div>
@@ -104,7 +104,7 @@
 			<div class="row">
 				<div class="col-lg-3">
 					<div class="white">
-						<a href="#" class="logo">
+						<a href="/azot/index.html" class="logo">
 							<img src="images/logo-white.svg" loading="lazy">
 						</a>
 						<nav class="social d-flex align-items-center justify-content-start">
@@ -120,10 +120,10 @@
 						<div class="bold">Каталог</div>
 						<nav>
 							<ul>
-								<li><a href="#">Селитра амиачная</a></li>
-								<li><a href="#">Карбамид</a></li>
-								<li><a href="#">Смесь карбамидно-аммиачная КАС-32</a></li>
-								<li><a href="#">Сульфат аммония</a></li>
+								<li><a href="/azot/product.html">Селитра амиачная</a></li>
+								<li><a href="/azot/product.html">Карбамид</a></li>
+								<li><a href="/azot/product.html">Смесь карбамидно-аммиачная КАС-32</a></li>
+								<li><a href="/azot/product.html">Сульфат аммония</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -133,7 +133,7 @@
 						<div class="bold">Информация</div>
 						<nav>
 							<ul>
-								<li><a href="#">Помощь</a></li>
+								<li><a href="/azot/faq.html">Помощь</a></li>
 								<li><a href="#">Политика конфиденциальности</a></li>
 								<li><a href="#">Пользовательское соглашение</a></li>
 								<li><a href="#">География работы</a></li>
@@ -147,9 +147,9 @@
 						<div class="bold">Личный кабинет</div>
 						<nav>
 							<ul>
-								<li><a href="#">Заявки</a></li>
-								<li><a href="#">Профиль компании</a></li>
-								<li><a href="#">История заказов</a></li>
+								<li><a href="/azot/applications.html">Заявки</a></li>
+								<li><a href="/azot/profile.html">Профиль компании</a></li>
+								<li><a href="/azot/history.html">История заказов</a></li>
 							</ul>
 						</nav>
 					</div>
