new_link_fix_1203

--- a/application.html
+++ b/application.html
@@ -508,64 +508,64 @@
 			</div>
 		</div>
 		</main>
-			<footer>
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-lg-3">
-							<div class="white">
-								<a href="#" class="logo">
-									<img src="images/logo-white.svg" loading="lazy">
+		<footer>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-lg-3">
+						<div class="white">
+							<a href="/azot/index.html" class="logo">
+								<img src="images/logo-white.svg" loading="lazy">
+							</a>
+							<nav class="social d-flex align-items-center justify-content-start">
+								<a href="#">
+									<img src="images/icons/vk.svg" loading="lazy">
 								</a>
-								<nav class="social d-flex align-items-center justify-content-start">
-									<a href="#">
-										<img src="images/icons/vk.svg" loading="lazy">
-									</a>
-								</nav>
-								<div class="copyright small">© 2007-2023 АО ГК «Азот»</div>
-							</div>
+							</nav>
+							<div class="copyright small">© 2007-2023 АО ГК «Азот»</div>
 						</div>
-						<div class="col-lg-3">
-							<div class="f_widget white">
-								<div class="bold">Каталог</div>
-								<nav>
-									<ul>
-										<li><a href="#">Селитра амиачная</a></li>
-										<li><a href="#">Карбамид</a></li>
-										<li><a href="#">Смесь карбамидно-аммиачная КАС-32</a></li>
-										<li><a href="#">Сульфат аммония</a></li>
-									</ul>
-								</nav>
-							</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="f_widget white">
+							<div class="bold">Каталог</div>
+							<nav>
+								<ul>
+									<li><a href="/azot/product.html">Селитра амиачная</a></li>
+									<li><a href="/azot/product.html">Карбамид</a></li>
+									<li><a href="/azot/product.html">Смесь карбамидно-аммиачная КАС-32</a></li>
+									<li><a href="/azot/product.html">Сульфат аммония</a></li>
+								</ul>
+							</nav>
 						</div>
-						<div class="col-lg-3">
-							<div class="f_widget white">
-								<div class="bold">Информация</div>
-								<nav>
-									<ul>
-										<li><a href="#">Помощь</a></li>
-										<li><a href="#">Политика конфиденциальности</a></li>
-										<li><a href="#">Пользовательское соглашение</a></li>
-										<li><a href="#">География работы</a></li>
-										<li><a href="#">Новости и обновления</a></li>
-									</ul>
-								</nav>
-							</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="f_widget white">
+							<div class="bold">Информация</div>
+							<nav>
+								<ul>
+									<li><a href="/azot/faq.html">Помощь</a></li>
+									<li><a href="#">Политика конфиденциальности</a></li>
+									<li><a href="#">Пользовательское соглашение</a></li>
+									<li><a href="#">География работы</a></li>
+									<li><a href="#">Новости и обновления</a></li>
+								</ul>
+							</nav>
 						</div>
-						<div class="col-lg-3">
-							<div class="f_widget white">
-								<div class="bold">Личный кабинет</div>
-								<nav>
-									<ul>
-										<li><a href="/azot/applications.html">Заявки</a></li>
-										<li><a href="/azot/profile.html">Профиль компании</a></li>
-										<li><a href="/azot/history.html">История заказов</a></li>
-									</ul>
-								</nav>
-							</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="f_widget white">
+							<div class="bold">Личный кабинет</div>
+							<nav>
+								<ul>
+									<li><a href="/azot/applications.html">Заявки</a></li>
+									<li><a href="/azot/profile.html">Профиль компании</a></li>
+									<li><a href="/azot/history.html">История заказов</a></li>
+								</ul>
+							</nav>
 						</div>
 					</div>
 				</div>
-			</footer>
+			</div>
+		</footer>
 			<div class="popup for-profile">
 				<div class="popup-dialog">
 					<div class="popup-wrap">
