--- a/product-registred.html
+++ b/product-registred.html
@@ -382,7 +382,7 @@
 				<div class="row">
 					<div class="col-lg-3">
 						<div class="white">
-							<a href="#" class="logo">
+							<a href="/azot/index.html" class="logo">
 								<img src="images/logo-white.svg" loading="lazy">
 							</a>
 							<nav class="social d-flex align-items-center justify-content-start">
@@ -398,10 +398,10 @@
 							<div class="bold">Каталог</div>
 							<nav>
 								<ul>
-									<li><a href="#">Селитра амиачная</a></li>
-									<li><a href="#">Карбамид</a></li>
-									<li><a href="#">Смесь карбамидно-аммиачная КАС-32</a></li>
-									<li><a href="#">Сульфат аммония</a></li>
+									<li><a href="/azot/product.html">Селитра амиачная</a></li>
+									<li><a href="/azot/product.html">Карбамид</a></li>
+									<li><a href="/azot/product.html">Смесь карбамидно-аммиачная КАС-32</a></li>
+									<li><a href="/azot/product.html">Сульфат аммония</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -411,7 +411,7 @@
 							<div class="bold">Информация</div>
 							<nav>
 								<ul>
-									<li><a href="#">Помощь</a></li>
+									<li><a href="/azot/faq.html">Помощь</a></li>
 									<li><a href="#">Политика конфиденциальности</a></li>
 									<li><a href="#">Пользовательское соглашение</a></li>
 									<li><a href="#">География работы</a></li>
