--- a/applications.html
+++ b/applications.html
@@ -610,10 +610,12 @@
 												<span>
 													Ожидает отгрузки
 												</span>
-												<div class="d-flex align-items-center">
+<!-- Здесь логика прописана в CSS, если отстутсвует блок ниже, то будет как обычный Badget
+													<div class="d-flex align-items-center">
 													<a href="#">Принять</a>
 													<a href="#">Отказаться</a>
 												</div>
+ -->
 											</div>
 										</td>
 										<td>
