--- a/application.html
+++ b/application.html
@@ -165,6 +165,7 @@
 								<div class="small">Мы подготовили для вас коммерческое предложение.</div>
 								<div class="light less">Ознакомтесь и подтвердите что вас все устраивает</div>
 							</div>
+							<a href="#" class="btn btn-small ml-2">Посмотреть КП</a>
 						</div>
 						<div class="d-flex align-content-center btn-group">
 							<a href="#" class="btn btn-small">Отклонить</a>
@@ -341,10 +342,9 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="application_widget">
-						<div class="d-flex align-items-center justify-content-between mb-3">
-							<div class="three">Документы</div>
-							<label for="input_docs" class="btn">Загрузить документ</label>
-							<input type="file" class="d-none" id="input_docs">
+						<div class="mb-3">
+							<div class="three">Входящие документы</div>
+							<div class="less mt-2">Здесь отображаются документы</div>
 						</div>
 						<div class="file_list_widget">
 							<div>
@@ -443,7 +443,11 @@
 								</a>
 							</div>
 						</div>
-						<div class="three mt-5  mb-3">Загруженные</div>
+						<div class="d-flex align-items-center justify-content-between mt-5 mb-3">
+							<div class="three">Загруженные документы</div>
+							<label for="input_docs" class="btn">Загрузить документ</label>
+							<input type="file" class="d-none" id="input_docs">
+						</div>
 						<div class="file_list_widget">
 							<div>
 								<a href="#" class="d-flex align-items-center small">
@@ -479,7 +483,10 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="application_widget">
-						<div class="three mb-3">Статус отгрузки</div>
+						<div class="d-flex mb-3 align-items-center">
+							<div class="three ">Статус отгрузки</div>
+							<div class="three ml-2 small mt-1">Остаток отгрузки 1,2 т</div>
+						</div>
 						<div class="status_widget">
 
 								<table>
