--- a/documents.html
+++ b/documents.html
@@ -318,13 +318,13 @@
 							<div class="five blue mb-2">Информация</div>
 							<div class="less">Здесь хранятся все документы.</div>
 						</div>
-						<div class="d-flex align-items-center mb-3 btn-group-lg mb-4">
-							<a href="#" class="btn">Скачать шаблон договора</a>
-							<label for="input_docs" class="btn">Загрузить документ</label>
-							<input type="file" class="d-none" id="input_docs">
-						</div>
 						<div>
 							<div class="documents_widget" data-docs="Договоры">
+								<div class="d-flex align-items-center mb-3 btn-group-lg mb-4">
+									<a href="#" class="btn">Скачать шаблон договора</a>
+									<label for="input_docs" class="btn">Загрузить документ</label>
+									<input type="file" class="d-none" id="input_docs">
+								</div>
 								<div class="documents_widget_item signed">
 									<div class="documents_widget_item_meta d-flex justify-content-between align-items-center">
 										<div>
@@ -353,6 +353,42 @@
 												</svg>
 											</div>
 											<span class="small">Подписан</span>
+											<div class="droplist_docs d-flex flex-column">
+												<a href="#" class="link underline justify-content-start">
+													<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+														<g clip-path="url(#clip0_1188_6941)">
+															<path
+																d="M12.85 4.65L9.35 1.15C9.25 1.05 9.15 1 9 1H4C3.45 1 3 1.45 3 2V14C3 14.55 3.45 15 4 15H12C12.55 15 13 14.55 13 14V5C13 4.85 12.95 4.75 12.85 4.65ZM9 2.2L11.8 5H9V2.2ZM12 14H4V2H8V5C8 5.55 8.45 6 9 6H12V14Z"
+																fill="#3C3C3C" />
+															<path d="M11 11H5V12H11V11Z" fill="#3C3C3C" />
+															<path d="M11 8H5V9H11V8Z" fill="#3C3C3C" />
+														</g>
+														<defs>
+															<clipPath id="clip0_1188_6941">
+																<rect width="16" height="16" fill="white" />
+															</clipPath>
+														</defs>
+													</svg>
+													<span>Спецификация</span>
+												</a>
+												<a href="#" class="link underline justify-content-start">
+													<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+														<g clip-path="url(#clip0_1188_6941)">
+															<path
+																d="M12.85 4.65L9.35 1.15C9.25 1.05 9.15 1 9 1H4C3.45 1 3 1.45 3 2V14C3 14.55 3.45 15 4 15H12C12.55 15 13 14.55 13 14V5C13 4.85 12.95 4.75 12.85 4.65ZM9 2.2L11.8 5H9V2.2ZM12 14H4V2H8V5C8 5.55 8.45 6 9 6H12V14Z"
+																fill="#3C3C3C" />
+															<path d="M11 11H5V12H11V11Z" fill="#3C3C3C" />
+															<path d="M11 8H5V9H11V8Z" fill="#3C3C3C" />
+														</g>
+														<defs>
+															<clipPath id="clip0_1188_6941">
+																<rect width="16" height="16" fill="white" />
+															</clipPath>
+														</defs>
+													</svg>
+													<span>Дополнительное соглашение</span>
+												</a>
+											</div>
 										</div>
 										<div class="d-flex align-items-center documents_widget_links">
 											<a href="#" class="link underline">
@@ -459,6 +495,11 @@
 								</div>
 							</div>
 							<div class="documents_widget" data-docs="Счета">
+								<div class="d-flex align-items-center mb-3 btn-group-lg mb-4">
+									<a href="#" class="btn">Скачать шаблон договора</a>
+									<label for="input_docs" class="btn">Загрузить документ</label>
+									<input type="file" class="d-none" id="input_docs">
+								</div>
 								<div class="documents_widget_item signed">
 									<div class="documents_widget_item_meta d-flex justify-content-between align-items-center">
 										<div>
