--- a/verification.html
+++ b/verification.html
@@ -187,39 +187,74 @@
 							<fieldset data-field="Шаг 2">
 								<div class="three mb-5">Загрузите документы</div>
 								<div class="input_file_widget">
-									<div class="small">Загрузите карту партнера в формате doc, pdf.</div>
+									<div class="small">Карта партнера в формате doc, pdf.</div>
 									<div class="input_file_widget_item">
 										<label for="file1">Загрузить</label>
 									</div>
 									<input type="file" name="file1" id="file1">
 								</div>
-								<div class="input_file_widget">
-									<div class="small">Копия свидетельства о внесении записи в Единый государственный реестр</div>
+								<div class="input_file_widget" data-company-type="Индивидуальный предприниматель">
+									<div class="small">Загрузите выписку из ЕГРИП</div>
 									<div class="input_file_widget_item">
-										<label for="file2">Загрузить</label>
+										<label for="file11">Загрузить</label>
 									</div>
-									<input type="file" name="file2" id="file2">
+									<input type="file" name="file11" id="file11">
+								</div>
+								<div class="input_file_widget" data-company-type="Юридическое лицо">
+									<div class="small">Устав предприятия (полный)</div>
+									<div class="input_file_widget_item">
+										<label for="file_ustav">Загрузить</label>
+									</div>
+									<input type="file" name="file_ustav" id="file_ustav">
+								</div>
+								<div class="input_file_widget" data-company-type="Юридическое лицо">
+									<div class="small">Свидетельство о внесении записи в Единый государственный реестр</div>
+									<div class="input_file_widget_item">
+										<label for="file_svid">Загрузить</label>
+									</div>
+									<input type="file" name="file_svid" id="file_svid">
 								</div>
 								<div class="input_file_widget">
-									<div class="small">Отчет о финрезультатах и квитанции о получении налоговой бухотчетности за 2020г.</div>
+									<div class="small">Свидетельство о постановке на учет в налоговом органе</div>
 									<div class="input_file_widget_item">
-										<label for="file3">Загрузить</label>
+										<label for="file_svid1">Загрузить</label>
 									</div>
-									<input type="file" name="file3" id="file3">
+									<input type="file" name="file_svid1" id="file_svid1">
 								</div>
-								<div class="input_file_widget">
-									<div class="small">Титульный лист РСВ (расчеты по страховым взносам) за 2020г.</div>
+								<div class="input_file_widget" data-company-type="Индивидуальный предприниматель">
+									<div class="small">Уведомление о постановке на учет ФЛ в налоговом органе</div>
 									<div class="input_file_widget_item">
-										<label for="file4">Загрузить</label>
+										<label for="file12">Загрузить</label>
 									</div>
-									<input type="file" name="file4" id="file4">
+									<input type="file" name="file12" id="file12">
 								</div>
-								<div class="input_file_widget">
+								<div class="input_file_widget" data-company-type="Юридическое лицо">
 									<div class="small">Копия протокола общего собрания о назначении руководителя</div>
 									<div class="input_file_widget_item">
 										<label for="file5">Загрузить</label>
 									</div>
 									<input type="file" name="file5" id="file5">
+								</div>
+								<div class="input_file_widget" data-company-type="Юридическое лицо">
+									<div class="small">Копия протокола решения о назначении руководителя</div>
+									<div class="input_file_widget_item">
+										<label for="file_prot">Загрузить</label>
+									</div>
+									<input type="file" name="file_prot" id="file_prot">
+								</div>
+								<div class="input_file_widget" data-company-type="Юридическое лицо">
+									<div class="small">Отчет о финрезультатах и квитанции о получении налоговой бухотчетности</div>
+									<div class="input_file_widget_item">
+										<label for="file_buh">Загрузить</label>
+									</div>
+									<input type="file" name="file_buh" id="file_buh">
+								</div>
+								<div class="input_file_widget">
+									<div class="small">Титульный лист РСВ (расчет по страховым взносам) за последний период</div>
+									<div class="input_file_widget_item">
+										<label for="file4">Загрузить</label>
+									</div>
+									<input type="file" name="file4" id="file4">
 								</div>
 								<div class="d-flex justify-content-end mt-5">
 									<div class="btn btn-accent next_form">Перейти на 3 шаг</div>
