--- a/application.html
+++ b/application.html
@@ -444,9 +444,14 @@
 							</div>
 						</div>
 						<div class="d-flex align-items-center justify-content-between mt-5 mb-3">
-							<div class="three">Загруженные документы</div>
-							<label for="input_docs" class="btn">Загрузить документ</label>
+							<div>
+								<div class="three">Загрузить документы</div>
+							<div class="less mt-2">Здесь отображаются загруженные Вами документы</div>
+							</div>
+							<div>
+								<label for="input_docs" class="btn">Загрузить документ</label>
 							<input type="file" class="d-none" id="input_docs">
+							</div>
 						</div>
 						<div class="file_list_widget">
 							<div>
@@ -486,6 +491,7 @@
 						<div class="d-flex mb-3 align-items-center">
 							<div class="three ">Статус отгрузки</div>
 							<div class="three ml-2 small mt-1">Остаток отгрузки 1,2 т</div>
+							<div class="three ml-2 small mt-1 link_accent">Отгружено 0,2 т</div>
 						</div>
 						<div class="status_widget">
 
@@ -504,7 +510,7 @@
 											<td>
 												<img src="images/icons/docs_black.svg" alt="">
 												<span class=" less">
-												Доверенность №1221 от 21.11.2023 в PDF
+												Доверенность №1221
 											</span></td>
 										</tr>
 									</tbody>
