--- a/applications.html
+++ b/applications.html
@@ -465,7 +465,7 @@
 														</clipPath>
 													</defs>
 												</svg>
-												<span>Документы <b>1</b></span>
+												<span>Входящие документы <b>1</b></span>
 											</a>
 										</td>
 										<td>
@@ -523,7 +523,7 @@
 														</clipPath>
 													</defs>
 												</svg>
-												<span>Документы <b>1</b></span>
+												<span>Входящие документы <b>1</b></span>
 											</a>
 										</td>
 										<td>
@@ -550,7 +550,7 @@
 											<div class="less light">Объем: 1,5 т </div>
 											<div class="badget badget_payment mt-3">
 												<span>
-													Документы
+													Ожидание оплаты
 												</span>
 											</div>
 										</td>
@@ -581,7 +581,7 @@
 														</clipPath>
 													</defs>
 												</svg>
-												<span>Документы <b>1</b></span>
+												<span>Входящие документы <b>1</b></span>
 											</a>
 										</td>
 										<td>
@@ -645,7 +645,7 @@
 														</clipPath>
 													</defs>
 												</svg>
-												<span>Документы <b>1</b></span>
+												<span>Входящие документы <b>1</b></span>
 											</a>
 										</td>
 										<td>
@@ -850,9 +850,7 @@
 						<img src="images/cancel.svg">
 					</div>
 					<div class="d-flex align-items-center mb-4">
-						<div class="three">Документы по заявке №1221</div>
-						<label for="input_docs" class="btn ml-2">Загрузить документ</label>
-						<input type="file" class="d-none" id="input_docs">
+						<div class="three">Входящие документы по заявке № №1221</div>
 					</div>
 					<div class="file_list_widget">
 						<div>
@@ -951,7 +949,11 @@
 							</a>
 						</div>
 					</div>
-					<div class="four mt-5  mb-3">Загруженные</div>
+					<div class="d-flex mt-5  mb-3 align-items-center justify-content-between">
+						<div class="four">Загруженные документы</div>
+					<label for="input_docs" class="btn ml-2">Загрузить документ</label>
+						<input type="file" class="d-none" id="input_docs">
+					</div>
 					<div class="file_list_widget">
 						<div>
 							<a href="#" class="d-flex align-items-center small">
