--- a/documents.html
+++ b/documents.html
@@ -310,7 +310,7 @@
 							</form>
 						</div>
 						<div class="application_filter documents_filter d-flex align-items-center mb-3">
-							<div class="active" data-docs-item="Договоры">Договоры</div>
+							<div class="active" data-docs-item="Договоры">Договоры и спецификации</div>
 							<div data-docs-item="Счета">Счета</div>
 							<div data-docs-item="Прочие документы">Прочие документы</div>
 						</div>
