--- a/faq.html
+++ b/faq.html
@@ -121,13 +121,13 @@
 				<div class="col-12">
 					<div class="faq_widget">
 						<div class="faq_widget_item">
-							<div class="three">КТО МОЖЕТ ЗАРЕГИСТРИРОВАТЬСЯ В МАРКЕТЕ</div>
+							<div class="three">КТО МОЖЕТ ЗАРЕГИСТРИРОВАТЬСЯ В МАРКЕТЕ?</div>
 							<div class="small">
 								Зарегистрировать на сайте может любая фирма, имеющая статус юридического лица или ИП
 							</div>
 						</div>
 						<div class="faq_widget_item">
-							<div class="three">КАКИЕ ДОКУМЕНТЫ НУЖНЫ</div>
+							<div class="three">КАКИЕ ДОКУМЕНТЫ НУЖНЫ?</div>
 							<div class="small">
 								Для Юридического лица (АО, ООО, ПАО и пр.):
 								<ol>
@@ -151,7 +151,7 @@
 							</div>
 						</div>
 						<div class="faq_widget_item">
-							<div class="three">КАКИЕ ВИДЫ ДОСТАВКИ ЕСТЬ</div>
+							<div class="three">КАКИЕ ВИДЫ ДОСТАВКИ ЕСТЬ?</div>
 							<div class="small">
 								<ol>
 									<li>Самовывоз;</li>
@@ -161,7 +161,7 @@
 							</div>
 						</div>
 						<div class="faq_widget_item">
-							<div class="three">ГДЕ ПРОИЗВОДСТВО</div>
+							<div class="three">ГДЕ НАХОДИТСЯ ПРОИЗВОДСТВО?</div>
 							<div class="small">
 								<ol>
 									<li>АО «Аммоний». Адрес производства: Россия, Республика Татарстан, г. Менделеевск, Промзона. Сайт производителя - https://ammoni.ru/</li>
@@ -171,7 +171,7 @@
 							</div>
 						</div>
 						<div class="faq_widget_item">
-							<div class="three">КАКОЙ МИНИМАЛЬНЫЙ ОБЪЕМ ЗАКАЗА</div>
+							<div class="three">КАКОЙ МИНИМАЛЬНЫЙ ОБЪЕМ ЗАКАЗА?</div>
 							<div class="small">
 								Минимальный объем заказа при самовывозе – 50кг, при выборе способа доставки ЖД транспортом – вагонная партия.
 							</div>
@@ -183,7 +183,7 @@
 							</div>
 						</div>
 						<div class="faq_widget_item">
-							<div class="three">Как рассчитывается стоимость</div>
+							<div class="three">Как рассчитывается стоимость?</div>
 							<div class="small">
 								Цена продукции зависит пункта назначения доставки продукции, его базовой цены. Итоговую стоимость вы можете найти в разделе «Личный кабинет» (ссылка на личный кабинет) либо по телефону.
 							</div>
