--- a/product.html
+++ b/product.html
@@ -212,22 +212,35 @@
 									<hr>
 									<div class="four mb-3 mt-4 text-normal">Срок поставки</div>
 									<div>
-										<input type="hidden" name="company_type" value="Юридическое лицо">
+										<input type="hidden" name="company_type" value="До фиксированной даты">
 										<div class="d-flex justify-content-between">
 											<div class="choice_button choice_accent active">
 												<label for="company_choice1">До фиксированной даты</label>
-												<input type="radio" checked name="company_item" value="Юридическое лицо" id="company_choice1">
+												<input type="radio" checked name="company_item" value="До фиксированной даты" id="company_choice1">
 											</div>
 											<div class="choice_button choice_accent ">
 												<label for="company_choice2" name="company">Период поставки </label>
-												<input type="radio" name="company_item" value="Индивидуальный предприниматель"
+												<input type="radio" name="company_item" value="Период поставки"
 													id="company_choice2">
 											</div>
 										</div>
 									</div>
-									<div class="form-group mt-2">
-										<input type="date" name="" id="">
-									</div>
+										<div class="form-group mt-2 d-flex input-choice" data-company-type="До фиксированной даты">
+											<div class="form-group mt-0">
+												<label for="">Дата поставки</label>
+												<input type="date" name="" id="4">
+											</div>
+										</div>
+										<div class="form-group mt-2 d-flex input-choice" data-company-type="Период поставки">
+											<div class="form-group">
+												<label for="">От какого числа поставка</label>
+												<input type="date" name="" id="current" disabled>
+											</div>
+											<div class="form-group mt-0">
+												<label for="">Дата поставки</label>
+												<input type="date" name="" id="4" disabled  style="border-left: none;">
+											</div>
+										</div>
 									<div class="d-flex justify-content-end mt-4">
 										<div class="btn btn-accent to-application-check">Отправить заявку</div>
 									</div>
